tests/machine/x/ocaml/string_in_operator.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_in_operator.ml", line 39, characters 41-42:
39 |   print_endline (__show ((List.mem "cat" s)));
                                              ^
Error: This expression has type string but an expression was expected of type
         string list


Context (around line 39):
  37 | 
  38 | let () =
  39 |   print_endline (__show ((List.mem "cat" s)));
  40 |   print_endline (__show ((List.mem "dog" s)));
  41 | 
